@@ -1,5 +1,6 @@
 LIST OF CHANGES
 
+ - Sort the dropdown menu of instruments on 'New Run' page
  - Usage page retired
 
 release 91.8.0
